Changelog Acumulus web shop extensions
======================================

This file contains a historical overview of changes in our own code.

7.6.5 (2023-??-??)
------------------
bugs:
- PS: Wrong conversion specification in sprintf in AcumulusEntryManager::insert.


7.6.4 (2023-02-07) (MA only) (PS later)
---------------------------------------
Features:
- PHP8.2 awareness: removed use of a dynamic property in class Log.
- ALL: Fatal errors will now log stack trace (fallback for when mail does not work).

Bugs:
- MA (+ some other?): FormHelper::getMeta() could return null, leading to errors. This
  method will now return an empty array when there is no meta field.
- MA: Magento\Helpers\Registry.php(49): substr(): Argument #3 ($length) must be of type
  ?int, bool given.

Refactorings:
- MA: Added strict typing (PHP7.4 level).


7.6.3 (2023-02-06) (JOO only)
-----------------------------
Features:
- PHP8.1 awareness: Added the #[ReturnTypeWillChange] attribute where necessary. Turned
  out to be needed in only 1 place, code that isn't yet functional.
- PHP8.2 awareness: Added the #[SensitiveParameter] attribute to all parameters that may
  contain the Acumulus API password. This syntax is seen as a comment in PHP 7.4 and
  ignored as an attribute in PHP 8.0 and 8.1, so this is a forward compatible change.
  Notes:
  - It is unclear whether this attribute needs to be repeated on overriding methods. For
    now this is not done, so this might turn out to be a documentation-only feature. We
    will test this on PHP 8.2 when possible.
  - For now, only the password used to connect to the Acumulus API is considered
    sensitive. Privacy-related client data, e.g. (e-mail) addresses, are not protected
    intrinsically, though, the parameter being the whole message to send to Acumulus, they
    will often be protected as well.
  - For years, our own logging already masks passwords. This will not change by this
    feature.


Bugs: